Closed Bug 1616262 Opened 4 years ago Closed 4 years ago

Prevent early crashes in non-content/plugin processes from crashing the main process

Categories

(Toolkit :: Crash Reporting, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: gsvelto, Assigned: gsvelto)

Details

Attachments

(1 file)

The fix for bug 1610566 turned out not to be complete. While we don't hit an assertion anymore with certain process types (such as the GPU process) we might cause a NULL-pointer dereference if the process crashes early enough.

This is because the parent object calls GenerateCrashReport() with a NULL parameter for the minidump ID (since it doesn't care about it), but the code in HandleOrphanedMinidump() assumes that if a minidump was taken correctly we care about its ID.

Let's fix this right now.

Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Pushed by gsvelto@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cfa84ca1d41c
Prevent the main process from crashing in response to an early GPU/VR/Socket/RDD process crash r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: