Bug 1616262 - Prevent the main process from crashing in response to an early GPU/VR/Socket/RDD process crash r=froydnj

Previously we passed a potentially NULL pointer to
CrashReporterHost::FinalizeOrphanedMinidump() which always assumed it to be
non-NULL. This patch solves the issue but preventing the pointer from being
NULL and making CrashReporterHost::GenerateCrashReport() infallible. In the
case we fail to take a minidump the only visible effect will be that the
minidump ID will be empty, and existing code already expects and handles this
scenario correctly.

Differential Revision: https://phabricator.services.mozilla.com/D63179