dom/media/gmp/GMPParent.h
@@ -154,7 +154,7 @@ class GMPParent final
   RefPtr<GenericPromise> ReadChromiumManifestFile(
       nsIFile* aFile);  // GMP thread.
   void AddCrashAnnotations();
-  bool GetCrashID(nsString& aResult);
+  void GetCrashID(nsString& aResult);
   void ActorDestroy(ActorDestroyReason aWhy) override;
 
   mozilla::ipc::IPCResult RecvPGMPStorageConstructor(
